[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprites/Final/Boss.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Enemies/En_BossShield.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/Enemies/En_Boss.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 31.2591, 34.1708 )

[node name="Boss" type="Area2D"]
script = ExtResource( 3 )

[node name="Shield" type="Node2D" parent="."]

[node name="BossShield" parent="Shield" instance=ExtResource( 2 )]
position = Vector2( -40, 70 )
rotation = 0.523599

[node name="BossShieldS" parent="Shield" instance=ExtResource( 2 )]
position = Vector2( 0, 80 )

[node name="BossShield7" parent="Shield" instance=ExtResource( 2 )]
position = Vector2( 40, 70 )
rotation = -0.523599

[node name="BossShieldE" parent="Shield" instance=ExtResource( 2 )]
position = Vector2( 80, 0 )
rotation = -1.5708

[node name="BossShield4" parent="Shield" instance=ExtResource( 2 )]
position = Vector2( 70, -40 )
rotation = -2.0944

[node name="BossShield9" parent="Shield" instance=ExtResource( 2 )]
position = Vector2( 80, 0 )
rotation = -1.5708

[node name="BossShield8" parent="Shield" instance=ExtResource( 2 )]
position = Vector2( 70, 40 )
rotation = -1.0472

[node name="BossShieldN" parent="Shield" instance=ExtResource( 2 )]
position = Vector2( 0, -80 )
rotation = 3.14159

[node name="BossShield3" parent="Shield" instance=ExtResource( 2 )]
position = Vector2( 40, -70 )
rotation = -2.61799

[node name="BossShield2" parent="Shield" instance=ExtResource( 2 )]
position = Vector2( -40, -70 )
rotation = 2.61799

[node name="BossShieldW" parent="Shield" instance=ExtResource( 2 )]
position = Vector2( -80, 0 )
rotation = 1.5708

[node name="BossShield10" parent="Shield" instance=ExtResource( 2 )]
position = Vector2( -70, -40 )
rotation = 2.0944

[node name="BossShield5" parent="Shield" instance=ExtResource( 2 )]
position = Vector2( -70, 40 )
rotation = 1.0472

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="EndTimer" type="Timer" parent="."]
one_shot = true

[node name="ShootTimer" type="Timer" parent="."]
one_shot = true
[connection signal="area_entered" from="." to="." method="_on_Boss_area_entered"]
[connection signal="timeout" from="EndTimer" to="." method="_on_EndTimer_timeout"]
[connection signal="timeout" from="ShootTimer" to="." method="shoot"]
